testdata/baselines/reference/submodule/conformance/optionalChainingInParameterBindingPattern(target=esnext).errors.txt
optionalChainingInParameterBindingPattern.ts(3,6): error TS2537: Type '{}' has no matching index signature for type 'string'.


==== optionalChainingInParameterBindingPattern.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): { d: string } | undefined => undefined;
    (({ [a()?.d]: c = "" }) => {})();
         ~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'string'.